@@ -13,7 +13,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import sr.we.data.Role;
 import sr.we.data.entity.SamplePerson;
-import sr.we.data.entity.User;
 import sr.we.data.service.SamplePersonRepository;
 import sr.we.data.service.UserRepository;
 
@@ -46,22 +45,22 @@ public class DataGenerator {
             samplePersonRepository.saveAll(samplePersonRepositoryGenerator.create(100, seed));
 
             logger.info("... generating 2 User entities...");
-            User user = new User();
-            user.setName("John Normal");
-            user.setUsername("user");
-            user.setHashedPassword(passwordEncoder.encode("user"));
-            user.setProfilePictureUrl(
-                    "https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
-            user.setRoles(Collections.singleton(Role.USER));
-            userRepository.save(user);
-            User admin = new User();
-            admin.setName("Emma Powerful");
-            admin.setUsername("admin");
-            admin.setHashedPassword(passwordEncoder.encode("admin"));
-            admin.setProfilePictureUrl(
-                    "https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
-            admin.setRoles(Set.of(Role.USER, Role.ADMIN));
-            userRepository.save(admin);
+//            User user = new User();
+//            user.setName("John Normal");
+//            user.setUsername("user");
+//            user.setHashedPassword(passwordEncoder.encode("user"));
+//            user.setProfilePictureUrl(
+//                    "https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
+//            user.setRoles(Collections.singleton(Role.USER));
+//            userRepository.save(user);
+//            User admin = new User();
+//            admin.setName("Emma Powerful");
+//            admin.setUsername("admin");
+//            admin.setHashedPassword(passwordEncoder.encode("admin"));
+//            admin.setProfilePictureUrl(
+//                    "https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
+//            admin.setRoles(Set.of(Role.USER, Role.ADMIN));
+//            userRepository.save(admin);
 
             logger.info("Generated demo data");
         };
